services/registry/kustomize/research/quay/02-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quay-postgres
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quay-postgres
  template:
    metadata:
      labels:
        app: quay-postgres
    spec:
      volumes:
        - name: postgresdata
          persistentVolumeClaim:
            claimName: quay-postgres-storage-pvc
      containers:
        - name: quay-postgres
          image: "postgres:15"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgresdata
              mountPath: /var/lib/postgresql/data
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: quay-postgres
  namespace: default
  labels:
    app: quay
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: quay-postgres
