services/registry/kustomize/research/quay/04-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: quay-ingress
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: (Host("registry.kluster.local")) || (Host("registry.ladesa.com.br")) || PathPrefix(`/`)
      services:
        - name: quay
          namespace: default
          port: web
